# goose

./: .gitignore  Cargo.toml  README.md  data.db
goose/: Cargo.toml
goose-db/: Cargo.toml
goose-db/src/: db.rs  error.rs  lib.rs
migrations/2026-06-12-081652-0000_create_bar_calendar/: down.sql  up.sql
migrations/2026-06-29-075610-0000_ohlc_not_null/: down.sql  up.sql
src/: backtest.rs  cli.rs  core.rs  data.rs  engine.rs  error.rs  lib.rs  main.rs  schema.rs  strat.rs
src/backtest/: broker.rs  engine.rs
src/core/: event.rs  strategy.rs
src/data/: db.rs  decimal.rs  entity.rs  fetcher.rs  handler.rs
src/engine/: broker.rs  engine.rs  event.rs  logger.rs
tests/: backtest.rs  cli.rs  csv_fetcher.rs  database.rs  date.rs  date_bar.rs  error.rs  price.rs  price_adjust.rs  quantity.rs
