[package]
name = "goose"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
csv = "1.4.0"
diesel = { version = "2.3.10", features = ["sqlite"] }
diesel_migrations = "2.3.2"
rust_decimal = "1.42.1"
thiserror = "2.0.18"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
